[package]
name = "beet_action"
version.workspace = true
edition.workspace = true
description = "Entities as async functions."
documentation.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["std", "reflect"]
# a std build links rhai's std *mode*; no_std consumers (eg `beet_esp`) leave
# `std` off and select rhai's `no_std` mode on their own dependency edge, keeping
# the `rhai` feature mode-agnostic so it never collides under `--all-features`.
# The typed `Script` marshals through `Value` (not rhai's serde), so its runtimes
# build `no_std`; `std` is no longer part of the scripting story.
std = ["beet_core/std", "rhai?/std", "rquickjs?/std"]
serde = ["dep:serde", "beet_core/serde", "bitflags/serde"]
json = ["serde", "dep:serde_json", "beet_core/json"]
template_serde = ["beet_core/template_serde"]
reflect = ["beet_core/bevy_reflect_documentation"]
# Engine-agnostic scripting framework (`ScriptLanguage` + dispatch). Pulls
# nothing — no serde, no engine, no std. The serde-marshalled `Script` /
# `ScriptAction` additionally require `serde`; a runtime requires a backend.
scripting = []
# The rhai engine + `ScriptLanguage::Rhai` + `exports::rhai`. Builds on the
# agnostic `scripting` layer (no point pulling the engine without it in a beet
# app). Pair with `serde` for the typed `Script::run` rhai runtime, which
# marshals through `Value` by hand and so needs neither std nor rhai's serde.
rhai = ["scripting", "dep:rhai"]
# Convenience alias: the rhai engine plus the typed `Script` runtime. `no_std`,
# so embedded consumers (eg `beet_esp`) get a working `Script` without `std`.
rhai_serde = ["rhai", "serde"]
# The QuickJS engine + `ScriptLanguage::QuickJs` + `exports::quickjs`. Builds on
# the agnostic `scripting` layer. QuickJS is a C engine, so it is native-only —
# `rquickjs` is a `not(wasm32)` dependency and the engine code is cfg'd off wasm.
# Pair with `json` for the typed `Script::run` quickjs runtime.
quickjs = ["scripting", "dep:rquickjs"]
# Convenience alias: the QuickJS engine plus the typed `Script` runtime, which
# marshals input/output as JSON (QuickJS's native currency, no `Value` hop), so
# it pulls `json` (serde_json, `no_std` with alloc). `rust-alloc` keeps the C
# engine std/libc-light, so this no longer requires `std`.
quickjs_serde = ["quickjs", "json"]

[dependencies]
beet_core = { workspace = true, default-features = false, features = ["bevy_async"] }
bevy = { workspace = true, features = ["bevy_color"] }
bitflags.workspace = true
extend.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rhai = { workspace = true, optional = true }

# QuickJS is a C engine with no wasm bindings, so its dependency is native-only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rquickjs = { workspace = true, optional = true }

[dev-dependencies]
beet_action = { path = ".", features= ["template_serde", "rhai_serde", "quickjs_serde"] }
beet_core = { workspace = true, features = ["testing", "ron"] }

[lib]
harness = false
