[package]
name = "beet_agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description = "Bevy-friendly patterns for interaction with agents"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
rustls-tls = ["beet_net/rustls-tls"]
native-tls = ["beet_net/native-tls"]

[dependencies]
# rig-core = { version = "0.18" }
anyhow.workspace = true
thiserror.workspace = true
bevy.workspace = true
dotenv.workspace = true
beet_net.workspace = true
beet_core = { workspace = true, features = ["serde"] }
serde.workspace = true
base64.workspace = true
serde_json.workspace = true
serde_with = "3.12"
http.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
#https://rustwasm.github.io/wasm-bindgen/api/web_sys/
#https://github.com/rustwasm/wasm-bindgen/blob/main/crates/web-sys/Cargo.toml
web-sys = {workspace = true, features = [
# WebRtc
'Window',
'Navigator',
'MediaDevices',
'MediaStream',
'MediaStreamConstraints',
'RtcPeerConnection',
'RtcDataChannel',
'RtcDataChannelInit',
'RtcSessionDescriptionInit',
'RtcSdpType',
'RtcTrackEvent',
'HtmlAudioElement',
'RtcRtpSender',
'MediaStreamTrack',
]}



[dev-dependencies]
tokio.workspace = true
sweet.workspace = true

[[test]]
name = "chat"
path = "tests/chat.rs"
required-features = ["native-tls"]
[[test]]
name = "gemini-image"
path = "tests/gemini-image.rs"
required-features = ["native-tls"]
