[package]
name = "beet_app"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[features]
default = ["server"]
server = ["dep:beet_server", "dep:beet_router"]


[dependencies]
beet_rsx.workspace = true
anyhow.workspace = true
futures.workspace = true
clap.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
beet_router = { workspace = true, optional = true }
beet_server = { workspace = true, optional = true }

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
