[package]
name = "beet_app"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

[features]
default = ["serde"]
# default = ["server"]
serde = ["dep:serde", "dep:ron"]
server = ["dep:beet_server", "beet_router/parser"]


[dependencies]
beet_rsx.workspace = true
beet_router.workspace = true

anyhow.workspace = true
futures.workspace = true
clap.workspace = true
serde = { workspace = true, optional = true }
ron = { workspace = true, optional = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true
beet_server = { workspace = true, optional = true }

# [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
[dev-dependencies]
sweet = { workspace = true, features = ["test"] }
