[package]
name = "beet_async"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description = "Vendored bevy_async bridge"
repository.workspace = true

[features]
default = ["std"]
std = [
	"bevy/std",
	"scoped_static_storage/std",
	"keyed_concurrent_queue/std",
]

[dependencies]
bevy = { workspace = true }
scoped_static_storage = { workspace = true }
keyed_concurrent_queue = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# multi_threaded so spawned (non-local) tasks actually run on worker threads
bevy = { workspace = true, features = ["std", "multi_threaded"] }
