[package]
name = "beet_build"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["markdown"]
# should usually be enabled but slows down rust analyzer
# default = ["markdown", "css"] 
markdown = ["dep:pulldown-cmark"]
css = ["dep:lightningcss", "dep:parcel_selectors"]

[[test]]
name = "lang_snippets"
path = "tests/lang_snippets.rs"
required-features = ["css"]
[[test]]
name = "rsx_snippets"
path = "tests/rsx_snippets.rs"
required-features = ["css"]

[dependencies]
#💡 Internal
beet_rsx = { workspace = true, features = ["tokens"] }
beet_common.workspace = true
beet_net = { workspace = true, features = ["tokens"] }
beet_utils = { workspace = true, features = ["fs"] }
beet_parse.workspace = true
beet_router.workspace = true
beet_core = { workspace = true, features = ["bevy_scene"] }

#💡 Utils
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
rapidhash.workspace = true
futures.workspace = true
heck.workspace = true
rayon.workspace = true

#💡 Tokens
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
proc-macro2-diagnostics.workspace = true

#💡 Serde
serde.workspace = true
toml.workspace = true
ron.workspace = true
serde_json.workspace = true

#💡 Parsing
prettyplease.workspace = true
cargo-manifest = "0.19"
pulldown-cmark = { version = "0.13", optional = true }

#💡 style
parcel_selectors = { workspace = true, optional = true }
# TODO direct dep, not workspace. this should be the only place
lightningcss = { workspace = true, optional = true }

#💡 Bevy
bevy = { workspace = true, features = ["bevy_scene"] }
flume = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio.workspace = true

[dev-dependencies]
sweet.workspace = true
send_wrapper.workspace = true
