[package]
name = "beet_clanker"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description = "ECS agentic workflow patterns"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]
default = ["fs","tool"]
rustls-tls = ["beet_net/rustls-tls"]
native-tls = ["beet_net/native-tls"]
fs = ["beet_core/fs"]
tool = ["dep:beet_tool"]

[dependencies]
beet_net = { workspace = true, features = ["ureq","json"] }
beet_core = { workspace = true, features = ["serde"] }
beet_tool = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v7", "js"] }
serde.workspace = true
futures.workspace = true
strum.workspace = true
thiserror.workspace = true
bevy.workspace = true
dotenv.workspace = true
async-lock.workspace = true
base64.workspace = true
serde_json.workspace = true
serde_with = "3.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
#https://rustwasm.github.io/wasm-bindgen/api/web_sys/
#https://github.com/rustwasm/wasm-bindgen/blob/main/crates/web-sys/Cargo.toml
web-sys = { workspace = true, features = [
	# WebRtc
	'Window',
	'Navigator',
	'MediaDevices',
	'MediaStream',
	'MediaStreamConstraints',
	'RtcPeerConnection',
	'RtcDataChannel',
	'RtcDataChannelInit',
	'RtcSessionDescriptionInit',
	'RtcSdpType',
	'RtcTrackEvent',
	'HtmlAudioElement',
	'RtcRtpSender',
	'MediaStreamTrack',
] }


[dev-dependencies]
beet_core = { workspace = true, features = ["testing"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
beet_clanker = { path = ".", features = ["native-tls"] }
