[package]
name = "beet_common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description = "low dependency common types and helpers for beet crates"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true


[features]
default = []
# default = ["serde", "tokens"]
serde = ["dep:serde", "dep:ron"]
tokens = [
	"serde",
	"dep:syn",
	"dep:quote",
	"dep:proc-macro2",
	"dep:proc-macro2-diagnostics",
]

[dependencies]
beet_common_macros.workspace = true
sweet.workspace = true
rapidhash.workspace = true
anyhow.workspace = true
extend.workspace = true
thiserror.workspace = true

bevy = { workspace = true }

#💡 serde
serde = { workspace = true, optional = true }
ron = { workspace = true, optional = true }


#💡 Tokens
syn = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
proc-macro2-diagnostics = { workspace = true, optional = true }


[dev-dependencies]
sweet = { workspace = true, features = ["test", "bevy"] }
