[package]
name = "beet_connect"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
description = "Various client library wrappers for external apis"
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true

[features]


[dependencies]
anyhow.workspace = true
thiserror.workspace = true
bevy.workspace = true
beet_core = { workspace = true, features = ["bevy", "net"] }
beet_utils.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with = "3.12"
http.workspace = true

[dev-dependencies]
tokio.workspace = true
sweet.workspace = true
