[package]
name = "beet_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description = "Core utilities and types for other beet crates"
repository.workspace = true


[[example]]
name = "to_tokens"
path = "examples/to_tokens.rs"
required-features = ["tokens"]

[[test]]
name = "to_tokens"
path = "tests/to_tokens.rs"
required-features = ["tokens"]


[features]
default = ["serde"]
exchange = []
nightly = []
ansi_paint = ["dep:nu-ansi-term"]
testing = ["ansi_paint"]
bevy_default = ["bevy_scene", "multi_threaded"]
bevy_scene = ["bevy/bevy_scene", "serde"]
bevy_reflect_documentation = ["bevy/reflect_documentation"]
multi_threaded = ["bevy/multi_threaded"]
serde = ["dep:serde", "dep:serde_json", "dep:ron", "dep:toml"]
rand = ["dep:rand", "dep:rand_chacha", "dep:getrandom","dep:uuid"]
# only uncomment when needed, cyclic dev deps break rust analyzer in weird ways
# _sweet_runner = ["sweet/runner"]

fs = [
	"dep:notify",
	"dep:notify-debouncer-full",
	"dep:ctrlc",
	"dep:futures",
	"dep:crossterm", "dep:async-fs", "dep:futures-lite"
]
tokens = [
	"serde",
	"dep:syn",
	"dep:quote",
	"dep:proc-macro2",
	"dep:prettyplease",
	"dep:proc-macro2-diagnostics",
	"dep:variadics_please",
]


[dependencies]
beet_core_macros.workspace = true
bevy.workspace = true

#💡 utils
tracing.workspace = true
itertools.workspace = true
send_wrapper.workspace = true
web-time.workspace = true
nu-ansi-term = { workspace = true, optional = true }

# async-task.workspace = true

#💡 path
path-clean = "1"
pathdiff = "0.2"
either = "1"

#💡 serde
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
ron = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

heck.workspace = true

#💡 async
futures-lite = { workspace = true, features = ["race"] }
async-channel.workspace = true

# tokens dependencies
syn = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
proc-macro2-diagnostics = { workspace = true, optional = true }
variadics_please = { workspace = true, optional = true }
prettyplease = { workspace = true, optional = true }

# rand
rand = { workspace = true, optional = true }
rand_chacha = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
uuid = { workspace = true, optional = true, features = ["v4"] }

## utils
thiserror.workspace = true
extend.workspace = true
glob.workspace = true
futures.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
## async
async-executor.workspace = true
async-io.workspace = true
async-task.workspace = true

## fs
async-fs = { workspace = true, optional = true }
futures-lite = { workspace = true, optional = true }
crossterm = { version = "0.28", optional = true }
notify = { version = "8", optional = true }
notify-debouncer-full = { version = "0.5", optional = true }
ctrlc = { version = "3", optional = true }
futures = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
#https://rustwasm.github.io/wasm-bindgen/api/web_sys/
#https://github.com/rustwasm/wasm-bindgen/blob/main/crates/web-sys/Cargo.toml
web-sys = {workspace = true, features = [
	# HTML
	"Text",
	"Comment",
	"Node",
	"NodeList",
	"Document",
	"Element",
	"Window",
	"HtmlAnchorElement",
	"HtmlButtonElement",
	"HtmlCanvasElement",
	"HtmlDivElement",
	"HtmlHeadElement",
	"HtmlInputElement",
	"HtmlIFrameElement",
	"HtmlLinkElement",
	"HtmlParagraphElement",
	"HtmlScriptElement",
	# File
	"File",
	"FileList",
	# Blob
	'Blob',
	'BlobEvent',
	'BlobEventInit',
	'BlobPropertyBag',
	# Style
	"MediaQueryList",
	# Events
	"MouseEvent",
	"KeyboardEvent",
	# JS
	"console",
	"Navigator",
	"Performance",
	# Url
	"Url",
	"History",
	"Location",
	"UrlSearchParams",
	# Resize Observer
	"ResizeObserver",
	"ResizeObserverBoxOptions",
	"ResizeObserverEntry",
	"ResizeObserverOptions",
	"ResizeObserverSize",
	"DomRect",
	"DomRectReadOnly"
]}

[dev-dependencies]
beet_core = {path = ".", features=["testing", "rand"]}
sweet.workspace = true
# abs_path serde roundtrip
serde_json.workspace = true

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
sweet = { workspace = true, features = ["runner"] }
