[package]
name = "beet_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true
license.workspace = true
readme.workspace = true
description = "Core utilities and types for other beet crates"
repository.workspace = true


# Stable test runner uses `inventory` + a `beet_core::test_main!()` entry
# point, so libtest's harness is disabled everywhere except `test_test`
# (the nightly `custom_test_frameworks` demonstrator, default harness).
[lib]
harness = false

[[example]]
name = "to_tokens"
path = "examples/to_tokens.rs"
required-features = ["tokens"]

[[test]]
name = "to_tokens"
path = "tests/to_tokens.rs"
required-features = ["tokens"]
harness = false

[[test]]
name = "bundle_effect"
path = "tests/bundle_effect.rs"
harness = false

[[test]]
name = "component_lifecycle"
path = "tests/component_lifecycle.rs"
harness = false

[[test]]
name = "component_lifecycle2"
path = "tests/component_lifecycle2.rs"
harness = false

[[test]]
name = "env_ext"
path = "tests/env_ext.rs"
harness = false

[[test]]
name = "no_tests"
path = "tests/no_tests.rs"
harness = false

[[test]]
name = "panic_location"
path = "tests/panic_location.rs"
harness = false

[[test]]
name = "stagger_output"
path = "tests/stagger_output.rs"
harness = false

[[test]]
name = "timeout_params"
path = "tests/timeout_params.rs"
harness = false


[features]
default = ["std"]
std = [
	"bevy_color",
	"bevy/std",
	"bevy/bevy_log",
	"bevy/debug",
	"bytes/std",
	"either/use_std",
	"itertools/use_std",
	"thiserror/std",
	"tracing/std",
	"serde?/std",
	"serde_json?/std",
	"rand?/std",
	"rand?/std_rng",
	"rand?/thread_rng",
	"rand_chacha?/std",
	"futures-lite/race",
	# the async bridge is std-independent, but every std build wants it
	"bevy_async",
	"beet_async?/std",
	"dep:send_wrapper",
	"dep:dotenv",
	"dep:async-lock",
	"dep:pathdiff",
	"dep:glob",
	"dep:futures",
	"dep:async-channel",
	"dep:async-executor",
	"dep:async-io",
	"dep:async-task",
	# std builds want the full rand surface: `rand::rng()` (thread_rng) and the
	# std backends. Optional so non-rand std builds are unaffected.
	"rand?/std",
	"rand?/thread_rng",
	"rand_chacha?/std",
	"uuid?/std",
]
# vendored bevy_async bridge + beet's high-level AsyncWorld/AsyncEntity layer.
# std-independent: only the default task spawner differs by target.
bevy_async = ["dep:beet_async"]
# no_std build for bare-metal targets (e.g. esp32): the libm / critical-section
# shims bevy needs without std. Capabilities like `bevy_color` are opt-in.
embedded = ["bevy/libm", "bevy/critical-section"]
ctrlc = ["dep:ctrlc"]
tokio = ["dep:tokio"]
nightly = []
testing = ["std", "dep:inventory"]
# Opt-in nightly path: the macro emits libtest `#[test]`s collected via
# `custom_test_frameworks`. Default builds use `inventory` on stable.
custom_test_frameworks = [
	"beet_core_macros/custom_test_frameworks",
	"testing",
	"nightly",
]
http = ["dep:http"]
crossterm = ["dep:crossterm"]
bevy_default = ["template_serde", "bevy_multithreaded"]
# template serialization, see src/template_serde. needs reflect + Entity serde
template_serde = ["serde", "bevy/serialize"]
bevy_keyboard = ["bevy/keyboard"]
bevy_mouse = ["bevy/mouse"]
bevy_reflect_documentation = ["bevy/reflect_documentation"]
bevy_multithreaded = ["bevy/multi_threaded"]
bevy_color = ["bevy/bevy_color"]
# Additive asset support for the template substrate: an asset path resolves to a
# `Handle` at build time and defers `LoadTemplate` until the asset finishes
# loading. The no_std core stays asset-free; removing this leaves a fully
# functional asset-free substrate where `LoadTemplate` fires immediately.
bevy_asset = ["bevy/bevy_asset"]
# no_std base serialization support. Heavier format crates (`ron`,
# `serde_plain`, json, postcard) are opt-in via their own features.
serde = [
	"bevy/serialize",
	"dep:serde",
	"smol_str/serde"
]
# RON text format, used by `MediaType::Ron` and `template_serde` loading.
ron = ["serde", "dep:ron"]
# Plaintext (de)serialization for `MediaType::Text` via serde_plain.
serde_plain = ["serde", "dep:serde_plain"]
json = ["serde", "dep:serde_json"]
postcard = ["serde", "dep:postcard"]
# no_std-capable RNG: `os_rng` seeds `ChaCha8Rng::from_os_rng()` via getrandom
# (a bare target installs a getrandom backend at boot); `std` adds thread_rng.
rand = [
	"dep:rand",
	"rand/os_rng",
	"rand/alloc",
	"dep:rand_chacha",
	"dep:getrandom",
]

# fs is std-only (notify/async-fs); `uuid` lives here as `tempdir` is its only
# user (`Uuid::now_v7`, which needs a clock).
fs = [
	"dep:notify",
	"dep:notify-debouncer-full",
	"dep:async-fs",
	"dep:async-process",
	"dep:uuid",
]
tokens = [
	"serde",
	"dep:beet_core_shared",
	"dep:syn",
	"dep:quote",
	"dep:proc-macro2",
	"dep:prettyplease",
	"dep:proc-macro2-diagnostics",
	"dep:variadics_please",
]
rsx = ["beet_core_macros/rsx"]


[dependencies]
beet_core_macros.workspace = true
beet_core_shared = { workspace = true, optional = true }
beet_async = { workspace = true, optional = true, default-features = false }
inventory = { workspace = true, optional = true }
bytes.workspace = true
bevy.workspace = true
bevy_reflect.workspace = true

#💡 utils
tracing.workspace = true
itertools = { workspace = true, features = ["use_alloc"] }
send_wrapper = { workspace = true, optional = true }
dotenv = { workspace = true, optional = true }
smol_str = { workspace = true }
heck.workspace = true
bitflags = { workspace = true }

#💡 http
http = {workspace = true,optional=true}


#💡 path
pathdiff = { version = "0.2", optional = true }
either = { version = "1", default-features = false }

#💡 serde
# Workspace serde is no_std (default-features off); `std` builds re-enable
# `serde/std` via the `std` feature. `alloc`/`rc` add the no_std collection impls.
serde = { workspace = true, optional = true, features = ["alloc", "rc"] }
serde_plain = {workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
postcard = { workspace = true, optional = true }
ron = { workspace = true, optional = true }


#💡 async
futures-lite = { workspace = true }
async-channel = { workspace = true, optional = true }
async-lock = { workspace = true, optional = true }

# tokens dependencies
syn = { workspace = true, optional = true }
quote = { workspace = true, optional = true }
proc-macro2 = { workspace = true, optional = true }
proc-macro2-diagnostics = { workspace = true, optional = true }
variadics_please = { workspace = true, optional = true }
prettyplease = { workspace = true, optional = true }

# rand — workspace sets default-features = false so the `rand` feature is
# no_std-capable (bare embedded targets). `std_rng` brings ChaCha, `os_rng`
# brings `from_os_rng` + getrandom. The `std` feature below re-adds `rand/std`
# + `thread_rng` so std builds keep `rand::rng()`.
rand = { workspace = true, optional = true, features = ["std_rng", "os_rng"] }
rand_chacha = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }
# workspace sets default-features = false so uuid compiles on no_std (it is only
# *used* by the std-only `tempdir`); `uuid/std` is re-added by the `std` feature.
# `js` (not `rng-getrandom`) supplies the wasm RNG: it keeps getrandom 0.4 out of
# the wasm graph, whose `MaybeUninit` slice marshalling traps the test runner.
uuid = { workspace = true, optional = true, features = ["v4", "v7", "js"] }

## utils
thiserror.workspace = true
extend.workspace = true
glob = { workspace = true, optional = true }
futures = { workspace = true, optional = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
## async
crossterm = { workspace = true, optional = true }
async-executor = { workspace = true, optional = true }
async-io = { workspace = true, optional = true }
async-task = { workspace = true, optional = true }
async-process = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

## fs
async-fs = { workspace = true, optional = true }
notify = { version = "8", optional = true }
notify-debouncer-full = { version = "0.5", optional = true }
ctrlc = { version = "3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
# tickable local executor for the bevy_async bridge: wasm's bevy `spawn_local`
# uses the JS event loop, which the synchronous sync-point driver cannot tick.
async-executor = { workspace = true, optional = true }
#https://rustwasm.github.io/wasm-bindgen/api/web_sys/
#https://github.com/rustwasm/wasm-bindgen/blob/main/crates/web-sys/Cargo.toml
web-sys = {workspace = true, features = [
	# HTML
	"Text",
	"Comment",
	"Node",
	"NodeList",
	"Document",
	"Element",
	"Window",
	"HtmlAnchorElement",
	"HtmlButtonElement",
	"HtmlCanvasElement",
	"HtmlDivElement",
	"HtmlHeadElement",
	"HtmlInputElement",
	"HtmlIFrameElement",
	"HtmlLinkElement",
	"HtmlParagraphElement",
	"HtmlScriptElement",
	# File
	"File",
	"FileList",
	# Blob
	'Blob',
	'BlobEvent',
	'BlobEventInit',
	'BlobPropertyBag',
	# Style
	"MediaQueryList",
	# Events
	"MouseEvent",
	"KeyboardEvent",
	# JS
	"console",
	"Navigator",
	"Performance",
	# Url
	"Url",
	"History",
	"Location",
	"UrlSearchParams",
	# Resize Observer
	"ResizeObserver",
	"ResizeObserverBoxOptions",
	"ResizeObserverEntry",
	"ResizeObserverOptions",
	"ResizeObserverSize",
	"DomRect",
	"DomRectReadOnly"
]}

[dev-dependencies]
beet_core = {path = ".", features=["testing"] }
# beet_core = {path = ".", features=["testing", "rand", "json", "postcard"]}
