[package]
name = "beet_design"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = true

# [[bin]]
# name = "run-build"
# path = "build.rs"
# required-features = ["build"]

[features]
# default = ["mockups"]
client = []
server = []
mockups = []
_test_lightningcss = ["dep:beet_parse", "beet_parse/css"]

[dependencies]
bevy.workspace = true
anyhow.workspace = true
beet_rsx.workspace = true
beet_core = { workspace = true, features = ["web"] }
beet_utils.workspace = true
beet_net.workspace = true
chrono.workspace = true
heck.workspace = true
material-colors = "0.4.2"

serde.workspace = true
beet_parse = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["HtmlFormElement", "FormData"] }


[dev-dependencies]
sweet.workspace = true
